adaptation mobile fixin  the project

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -14,7 +14,9 @@
 
 body {
   background-color: rgb(215 214 215);  
+  
 }
+
 
 h2 {
   font-family: "Poppins", serif;
@@ -716,7 +718,7 @@ li {
 
   .header_images {
     top: 143vw;
-    right: 1vw;
+    // right: 1vw;
     width: 96vw;
     height: 72vw;
   }
